# haskell-wot

./: README.md  wot.cabal
Codec/Archive/: Ar.hs
Data/Wot/: Parser.hs
tests/: unit-tests.hs
tests/Codec/Archive/: ArSpec.hs
tests/Data/Wot/: ParserSpec.hs
tests/data/: 2014-09-21.wot
