name:                 wot
version:              0.1.0.0
-- synopsis:            
-- description:         
license:              GPL-3
license-file:         LICENSE
author:               Grégoire Détrez
maintainer:           gregoire.detrez@gu.se
-- copyright:           
category:             Data
build-type:           Simple
extra-source-files:   README.md
cabal-version:        >=1.10

library
  -- exposed-modules:     
  -- other-modules:       
  -- other-extensions:    
  build-depends:        base >=4.7 && <4.8, containers == 0.5.5.*
  -- hs-source-dirs:      
  default-language:     Haskell2010

test-suite unit-tests
  type:                 exitcode-stdio-1.0
  main-is:              unit-tests.hs
  build-depends:        base, binary, bytestring, base16-bytestring,
                        ar==0.1.0.0, bzlib==0.5.0.4, containers == 0.5.5.*,
                        hspec == 1.12.1, QuickCheck == 2.7.6
  hs-source-dirs:       ., tests
  default-language:     Haskell2010
  extensions:           OverloadedStrings
  ghc-options:          -W -Wall -Werror
  other-modules:
